added more controller
