# src/models/APIResponse.ts
@@ -3,15 +3,8 @@
 /* eslint-disable */
 
 export type APIResponse = {
-  status: APIResponse.status;
-  reason?: string;
-  errors?: any;
-  id?: string;
-};
-
-export namespace APIResponse {
-  export enum status {
-    SUCCESS = 'success',
-    FAILED = 'failed',
-  }
+    status: 'success' | 'failed';
+    reason?: string;
+    errors?: any;
+    id?: string;
 }
