# src/models/MediaPayload.ts
@@ -3,16 +3,7 @@
 /* eslint-disable */
 
 export type MediaPayload = {
-  type: MediaPayload.type;
-  url: string;
-  text?: string;
-};
-
-export namespace MediaPayload {
-  export enum type {
-    IMAGE = 'image',
-    VIDEO = 'video',
-    AUDIO = 'audio',
-    DOCUMENT = 'document',
-  }
+    type: 'image' | 'video' | 'audio' | 'document';
+    url: string;
+    text?: string;
 }
