# src/models/ParameterPayload.ts
@@ -3,13 +3,6 @@
 /* eslint-disable */
 
 export type ParameterPayload = {
-  type?: ParameterPayload.type;
-  payload?: any;
-  all?: string;
-};
-
-export namespace ParameterPayload {
-  export enum type {
-    PARAMETER = 'parameter',
-  }
+    type?: 'parameter';
+    payload?: any;
 }
