# src/models/TextPayload.ts
@@ -3,12 +3,6 @@
 /* eslint-disable */
 
 export type TextPayload = {
-  type: TextPayload.type;
-  body: string;
-};
-
-export namespace TextPayload {
-  export enum type {
-    TEXT = 'text',
-  }
+    type: 'text';
+    body: string;
 }
